--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta property="og:type" content="Website" />
+    <meta property="og:title" content="winter Cup - GoldenSports" />
+    <meta property="og:url" content="https://wintercup.goldensports.at" />
+    <meta
+      property="og:description"
+      content="Österreichs größte Winter Hallenturnier"
+    />
+    <!-- <meta name="msapplication-TileImage" content="https://drive.google.com/file/d/1MHIyyqKjeR_2APeeWkqCYuky69ko0lhP/view?usp=drive_link" />  -->
+    <!-- <meta
+      property="og:image" itemprop="image"
+      content="https://drive.google.com/file/d/1MHIyyqKjeR_2APeeWkqCYuky69ko0lhP/view?usp=drive_link"
+    /> -->
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
     <title>Wintercup</title>
   </head>
   <body>
