--- a/public/index.html
+++ b/public/index.html
@@ -15,30 +15,19 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <meta property="og:type" content="Website" />
-    <meta property="og:title" content="winter Cup - GoldenSports" />
+    <meta property="og:title" content="Winter Cup - GoldenSports" />
     <meta property="og:url" content="https://wintercup.goldensports.at" />
     <meta
       property="og:description"
       content="Österreichs größte Winter Hallenturnier"
     />
-    <!-- <meta name="msapplication-TileImage" content="https://drive.google.com/file/d/1MHIyyqKjeR_2APeeWkqCYuky69ko0lhP/view?usp=drive_link" />  -->
-    <!-- <meta
-      property="og:image" itemprop="image"
-      content="https://drive.google.com/file/d/1MHIyyqKjeR_2APeeWkqCYuky69ko0lhP/view?usp=drive_link"
-    /> -->
+    <meta property="og:locale" content="de" />
+    <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/wintercup-op.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="300" />
     <meta property="og:image:height" content="300" />
+
     <title>Wintercup</title>
   </head>
   <body>
